Temporary fix to background being cut off.

--- a/src/components/Team.css
+++ b/src/components/Team.css
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     margin-top: 6rem;
+    padding: 1em;
 }
 
 .cardsBo {
